feat: ajustes layout + font

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h1 class="animate-text">Transforme seu E-commerce com IA</h1>
+                <h1 class="animate-text">Transforme seu <br> E-commerce com IA</h1>
                 <p class="animate-text delay-1">Atendimento inteligente 24/7 que aumenta suas vendas e satisfação dos clientes</p>
                 <a href="https://api.whatsapp.com/message/3R3M3MP7UA2AN1?autoload=1&app_absent=0" class="cta-button animate-text delay-2" target="_blank" rel="noopener noreferrer">Fale Conosco</a>
             </div>
@@ -75,7 +75,7 @@
             <div class="final-content">
                 <h2 class="section-title animate-text">Veja o ChatMode em ação</h2>
                 <div class="final-text animate-text delay-1">
-                    <p class="final-message">Está vendo esse chat aqui no canto? Ele está vinculado com o catálogo de produtos do seu Merchant Center. Imagine esse chat no seu e-commerce!</p>
+                    <p class="final-message">Está vendo esse chat aqui no canto? <br> Ele está vinculado com o catálogo de produtos do seu Merchant Center. Imagine esse chat no seu <br> e-commerce!</p>
                     <a href="https://api.whatsapp.com/message/3R3M3MP7UA2AN1?autoload=1&app_absent=0" class="cta-button animate-text delay-2" target="_blank" rel="noopener noreferrer">Quero esse chat no meu e-commerce</a>
                 </div>
             </div>
