--- a/index.html
+++ b/index.html
@@ -1,115 +1,119 @@
 <!DOCTYPE html>
-<html lang="pt-BR" data-theme="dark">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ChatMode - Agentes de IA para E-commerce</title>
+    <title>Autentique Demo - Assinatura Digital</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <button class="theme-toggle" id="themeToggle" aria-label="Alternar tema">
-        <i class="fas fa-moon"></i>
-    </button>
-
     <header class="header">
-        <nav class="nav-container">
-            <div class="logo">ChatMode</div>
-            <a href="https://api.whatsapp.com/message/3R3M3MP7UA2AN1?autoload=1&app_absent=0" class="cta-button" target="_blank" rel="noopener noreferrer">Fale Conosco</a>
-        </nav>
+        <div class="container">
+            <div class="logo">
+                <h1>Autentique<span>Demo</span></h1>
+                <div class="demo-banner">Página demo chatmode, acesso temporário</div>
+            </div>
+            <button class="menu-toggle" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+            <nav class="main-nav">
+                <ul>
+                    <li><a href="#inicio">Início</a></li>
+                    <li><a href="#como-funciona">Como Funciona</a></li>
+                    <li><a href="#planos">Planos</a></li>
+                    <li><a href="#seguranca">Segurança</a></li>
+                    <li><a href="#contato">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section class="hero">
-            <div class="hero-content">
-                <h1 class="animate-text">Transforme seu <br> E-commerce com IA</h1>
-                <p class="animate-text delay-1">Atendimento inteligente 24/7 que aumenta suas vendas e satisfação dos clientes</p>
-                <a href="https://api.whatsapp.com/message/3R3M3MP7UA2AN1?autoload=1&app_absent=0" class="cta-button animate-text delay-2" target="_blank" rel="noopener noreferrer">Fale Conosco</a>
-            </div>
-            <div class="hero-image animate-image">
-                <img src="./ecommerce.jpg" alt="ChatMode em ação">
+            <div class="container">
+                <h2>Assine e solicite assinatura eletrônica de contratos e outros documentos</h2>
+                <p>Simplifique seus processos com nossa solução de assinatura digital</p>
+                <a href="#contato" class="cta-button">Começar Agora</a>
             </div>
         </section>
 
-        <section class="features">
-            <h2 class="section-title animate-text">Como Funciona</h2>
-            <div class="features-grid">
-                <div class="feature-card animate-card">
-                    <h3>Integração Simples</h3>
-                    <p>Adicione o ChatMode ao seu e-commerce com apenas algumas linhas de código</p>
-                </div>
-                <div class="feature-card animate-card delay-1">
-                    <h3>IA Inteligente</h3>
-                    <p>Nossos agentes aprendem com cada interação para melhorar o atendimento</p>
-                </div>
-                <div class="feature-card animate-card delay-2">
-                    <h3>Personalização</h3>
-                    <p>Adapte o comportamento do agente às necessidades do seu negócio</p>
+        <section class="steps">
+            <div class="container">
+                <h2>Como Funciona</h2>
+                <div class="steps-grid">
+                    <div class="step-card">
+                        <div class="step-number">1</div>
+                        <h3>Acesse a mensagem de assinatura</h3>
+                        <p>Comece acessando o email, SMS, WhatsApp ou link solicitando a sua assinatura</p>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-number">2</div>
+                        <h3>Leia e assine o documento</h3>
+                        <p>Ao acessar o link de assinatura, você poderá ler o documento e na parte de baixo da tela haverá o botão "assinar"</p>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-number">3</div>
+                        <h3>Preencha os dados</h3>
+                        <p>Preencha as informações solicitadas pelo Autentique e realize as verificações necessárias para assinar o documento</p>
+                    </div>
+                    <div class="step-card">
+                        <div class="step-number">4</div>
+                        <h3>Personalize a sua assinatura</h3>
+                        <p>Quase lá! Falta apenas selecionar a aparência da sua assinatura. Você pode personalizar ela do seu jeito</p>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section class="agent-section">
-            <div class="agent-content">
-                <h2 class="section-title animate-text">Como funciona o agente?</h2>
-                <div class="agent-text animate-text delay-1">
-                    <p>O ChatMode integra-se perfeitamente ao seu e-commerce através do Google Merchant Center. Nosso agente de IA:</p>
-                    <ul class="agent-list">
-                        <li>Lê o arquivo XML do seu Google Merchant Center</li>
-                        <li>Acessa seu catálogo de produtos ativo</li>
-                        <li>Fornece atendimento personalizado 24/7</li>
-                    </ul>
-                    <p class="highlight-text">Imagine um atendimento que trabalha 24 horas por dia, 7 dias por semana.</p>
-                    <p class="scenario-text">Sabe aquele usuário que está pronto para comprar mas quer tirar apenas uma dúvida e por não ter ninguém online naquele momento do atendimento ele desiste? O ChatMode estaria ali!</p>
-                </div>
-            </div>
-            <div class="agent-image animate-image">
-                <img src="./chatmode.jpg" alt="Agente ChatMode em ação">
-            </div>
-        </section>
-
-        <section class="final-section">
-            <div class="final-content">
-                <h2 class="section-title animate-text">Veja o ChatMode em ação</h2>
-                <div class="final-text animate-text delay-1">
-                    <p class="final-message">Está vendo esse chat aqui no canto? <br> Ele está vinculado com o catálogo de produtos do seu Merchant Center. Imagine esse chat no seu <br> e-commerce!</p>
-                    <a href="https://api.whatsapp.com/message/3R3M3MP7UA2AN1?autoload=1&app_absent=0" class="cta-button animate-text delay-2" target="_blank" rel="noopener noreferrer">Quero esse chat no meu e-commerce</a>
+        <section class="widget-section">
+            <div class="container">
+                <h2>Ficou com dúvidas, quer entender como funciona nossa ferramenta, fale com nossa IA.</h2>
+                <div class="widget-container">
+                    <div class="cta-container">
+                        <div class="cta-icon">💬</div>
+                        <p>Converse com nossa IA</p>
+                    </div>
                 </div>
             </div>
         </section>
     </main>
 
     <footer class="footer">
-        <p>&copy; 2024 ChatMode. Todos os direitos reservados.</p>
+        <div class="container">
+            <p>&copy; 2025 Página demonstrativa para apresentação do ChatMode na Autentique.</p>
+        </div>
     </footer>
 
     <script>
-        const themeToggle = document.getElementById('themeToggle');
-        const html = document.documentElement;
-        const icon = themeToggle.querySelector('i');
-
-        // Check for saved theme preference
-        const savedTheme = localStorage.getItem('theme');
-        if (savedTheme) {
-            html.setAttribute('data-theme', savedTheme);
-            updateIcon(savedTheme);
-        }
-
-        themeToggle.addEventListener('click', () => {
-            const currentTheme = html.getAttribute('data-theme');
-            const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-            
-            html.setAttribute('data-theme', newTheme);
-            localStorage.setItem('theme', newTheme);
-            updateIcon(newTheme);
+        const menuToggle = document.querySelector('.menu-toggle');
+        const mainNav = document.querySelector('.main-nav');
+        
+        menuToggle.addEventListener('click', () => {
+            menuToggle.classList.toggle('active');
+            mainNav.classList.toggle('active');
         });
 
-        function updateIcon(theme) {
-            icon.className = theme === 'dark' ? 'fas fa-sun' : 'fas fa-moon';
-        }
+        // Fecha o menu ao clicar em um link
+        document.querySelectorAll('.main-nav a').forEach(link => {
+            link.addEventListener('click', () => {
+                menuToggle.classList.remove('active');
+                mainNav.classList.remove('active');
+            });
+        });
+    </script>
+
+    <script type="module">
+        import Chatmode from "https://cdn.jsdelivr.net/npm/@chatmode/embed/+esm";
+
+        Chatmode.initBubble({
+            "environmentId": "tnfeb992dh7mcufydbod7key",
+            "theme": "automatic",
+            "position": "bottom-right",
+            "iconKey": "organizations/x46c80pest8cm8fcfbgvoerd/environments/tnfeb992dh7mcufydbod7key/environment-icon",
+            "updatedAt": 1748357048902
+        });
     </script>
 </body>
 </html>
