--- a/index.html
+++ b/index.html
@@ -111,8 +111,7 @@
             "environmentId": "tnfeb992dh7mcufydbod7key",
             "theme": "automatic",
             "position": "bottom-right",
-            "iconKey": "organizations/x46c80pest8cm8fcfbgvoerd/environments/tnfeb992dh7mcufydbod7key/environment-icon",
-            "updatedAt": 1748357048902
+            "iconKey": null
         });
     </script>
 </body>
